--- a/FITLOI-UI/src/App.css
+++ b/FITLOI-UI/src/App.css
@@ -2,12 +2,14 @@ html, body {
   height: 100%;
   width: 100%;
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  /* flex-grow: 1; */
   min-height: 100vh;
 }
 .content {
