--- a/FITLOI-UI/src/Components/Footer/Footer.css
+++ b/FITLOI-UI/src/Components/Footer/Footer.css
@@ -55,7 +55,8 @@
     position: absolute;
     bottom: 0rem; 
     width: 100%;
-    opacity: 0;
+    /* opacity: 0; */
+    opacity: 2;
     transition: opacity 0.5s ease, transform 0.5s ease;
     z-index: 0; 
     padding:5px;
@@ -75,11 +76,12 @@
     border-radius: 9999px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     transition: transform 0.5s ease;
-}
-
-.icon:hover {
     transform: scale(1.1);
 }
+
+/* .icon:hover {
+    transform: scale(1.1);
+} */
 
 .icon svg {
     width: 1em;
