--- a/FITLOI-UI/src/Components/Header/Header.css
+++ b/FITLOI-UI/src/Components/Header/Header.css
@@ -19,6 +19,7 @@
     list-style: none;
     display: flex;
     flex-direction: row;
+    /* justify-content: center; */
     padding: 0;
     margin: 0;
     gap: 20px;
